kubernetes/infrastructure/vault/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault
  namespace: vault
  labels:
    app.kubernetes.io/name: vault
spec:
  parentRefs:
    - name: internal
      namespace: gateway-system
      sectionName: https
  hostnames:
    - vault.apps.mbhome.biz
  rules:
    - backendRefs:
        - name: vault-active
          port: 8200
