kubernetes/infrastructure/vault/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vault
  namespace: vault
  labels:
    app.kubernetes.io/name: vault
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vault
      component: server
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
            - port: "8201"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: vault
            component: server
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
            - port: "8201"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: vault-secrets-operator
            app.kubernetes.io/name: vault-secrets-operator
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
    - toCIDRSet:
        - cidr: 10.20.30.200/32
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toCIDRSet:
        - cidr: 10.20.30.50/32
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
    - toServices:
        - k8sService:
            namespace: gateway-system
            serviceName: cilium-gateway-internal
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: vault
            component: server
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
            - port: "8201"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: dex
            app.kubernetes.io/name: dex
      toPorts:
        - ports:
            - port: "5556"
              protocol: TCP
